# witt-data-studio

./: .gitignore  Makefile  README.md  meson.build
plugins/polars/witt-strutil/: Cargo.toml  Makefile  README.md  pyproject.toml
plugins/polars/witt-strutil/src/: expressions.rs  lib.rs
plugins/polars/witt-strutil/test/: test_pig_latinnify.py  test_split_by_character_transition.py  test_split_by_chars.py  test_split_by_digit_to_nondigit.py  test_split_by_lowercase_to_uppercase.py  test_split_by_nondigit_to_digit.py  test_split_by_uppercase_to_lowercase.py  test_to_sentence_case.py  test_to_sponge_case.py
plugins/polars/witt-strutil/tests/: test_pig_latinnify.py  test_split_by_character_transition.py  test_split_by_digit_to_nondigit.py  test_split_by_lowercase_to_uppercase.py  test_split_by_nondigit_to_digit.py  test_split_by_uppercase_to_lowercase.py  test_to_sentence_case.py  test_to_sponge_case.py
plugins/polars/witt-strutil/witt_strutil/: __init__.py  typing.py
po/: POTFILES.in  (+1 more)
src/: README.md  application.py  command-palette-dark.css  command_palette.py  command_palette.ui  database_add_duckdb_view.py  database_add_mysql_view.py  database_add_postgresql_view.py  database_add_postgresql_view.ui  database_add_sqlite_view.py  database_add_window.py  database_add_window.ui  database_import_window.py  database_import_window.ui  date_picker.py  environment.py  file_import_csv_view.py  file_import_parquet_view.py  file_import_window.py  file_import_window.ui  file_manager.py  formula_editor_window.py  formula_editor_window.ui  main.py  meson.build  status-bar-dark.css  status-bar.css  status_bar.py  status_bar.ui  style-dark.css  style.css  time_picker.py  toolbar-dark.css  toolbar.css  toolbar.py  toolbar.ui  utils.py  utils_color.py  utils_uinterface.py  window-dark.css  (+5 more)
src/backend/: database.py  file.py
src/chart/: README.md  action.py  canvas-dark.css  canvas.py  display.py  document.py  editor-dark.css  editor.py  editor.ui  renderer.py  style-dark.css  style.css  view.py
src/core/: README.md  action.py  arithmetic_evaluator.py  connection_manager.py  constants.py  construct.py  context_evaluator.py  datachart.py  datatable.py  document.py  file_manager.py  formula_evaluator.py  history.py  parser_command_context.py  parser_custom_formula.py  parser_sheet_formula.py  plugin_repository.py  plugins.py  utils.py  utils_file.py  utils_function.py  utils_numeric.py  utils_polars.py  utils_sheet.py  utils_string.py  utils_temporal.py  utils_type.py
src/core/evaluators/: arithmetic.py  context.py  formula.py
src/core/models/: chart.py  document.py  table.py
src/core/test/: test_formula_evaluator.py  test_parser_custom_formula.py  test_parser_sheet_formula.py
src/core/utils/: __init__.py  data_type.py  file.py  function.py  numeric.py  package.py  polars.py  string.py  temporal.py
src/editors/chart/: action.py  actions.py  canvas.py  display.py  document.py  editor.py  renderer.py  style.css  view.py
src/editors/node/: action.py  actions.py  canvas.py  content.py  editor.py  editor.ui  factory.py  frame.py  link.py  socket.py  style-dark.css  style.css  widgets.py
src/editors/node/actions/: __init__.py  add_link.py  add_node.py  delete_content.py  delete_link.py  delete_node.py  edit_node.py  move_node.py  select_by_click.py  select_by_rubberband.py  select_viewer.py
src/editors/node/factory/: __init__.py  _template.py  _utils.py  add_prefix.py  add_suffix.py  boolean.py  calculate_absolute.py  calculate_addition.py  calculate_arccosine.py  calculate_arcsine.py  calculate_arctangent.py  calculate_average.py  calculate_base_10.py  calculate_cosine.py  calculate_cube.py  calculate_division.py  calculate_earliest.py  calculate_exponent.py  calculate_integer_division.py  calculate_is_even.py  calculate_is_odd.py  calculate_latest.py  calculate_maximum.py  calculate_median.py  calculate_minimum.py  calculate_modulo.py  calculate_multiplication.py  calculate_natural.py  calculate_percent_of.py  calculate_percentage.py  calculate_power_k.py  calculate_sine.py  calculate_square.py  calculate_square_root.py  calculate_standard_deviation.py  calculate_subtraction.py  (+103 more)
src/editors/sheet/: action.py  actions.py  canvas.py  display.py  document.py  editor.py  editor.ui  renderer.py  selection.py  style.css  view.py  widgets.py
src/node/: README.md  action.py  canvas-dark.css  canvas.py  content-dark.css  content.py  context_menu.py  data_type.py  editor-dark.css  editor.py  editor.ui  frame-dark.css  frame.css  frame.py  frame.ui  link.py  minimap.py  repository.py  socket-dark.css  socket.css  socket.py  style-dark.css  style.css  widget.py
src/plugins/: polars.py
src/sheet/: README.md  action.py  canvas.py  display.py  document.py  editor-dark.css  editor.css  editor.py  editor.ui  filter_rows_window.py  filter_rows_window.ui  formula-bar.css  formula_bar.py  formula_bar.ui  renderer.py  selection.py  style-dark.css  style.css  toolbar.py  transform-window.css  transform_layout.py  transform_window.py  transform_window.ui  view.py  widget.py
src/tests/: test_common_evaluators_formula.py
src/ui/: date_picker.py  file_dialog.py  style-dark.css  style.css  time_picker.py  utils.py
src/ui/command_palette/: style.css  widget.py
src/ui/database_add/: view_duckdb.py  view_duckdb.ui  view_mysql.py  view_mysql.ui  view_postgresql.py  view_sqlite.py  view_sqlite.ui  widget.py
src/ui/database_import/: template.ui  widget.py
src/ui/file_import/: template.ui  view_csv.py  view_parquet.py  widget.py
src/ui/formula_editor/: template.ui  widget.py
src/ui/status_bar/: widget.py
src/ui/toolbar/: popover_recent_files.py  popover_recent_files.ui  style-dark.css  style.css  template.ui  widget.py
src/ui/window/: style.css  template.ui  widget.py
(+97 files in other folders)
