[package]
name = "witt-strutil"
version = "0.1.0"
edition = "2021"

[lib]
name = "witt_strutil"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "*", features = ["extension-module", "abi3-py313"] }
pyo3-polars = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
polars = { version = "*", default-features = false }
polars-arrow = { version = "*", default-features = false }
rand = "0.9.2"