[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "witt-strutil"
authors = [
  { name="Naufan Rusyda Faikar", email="hello@naruaika.me" },
]
description = "A small utility package for using strings in Witt Data Studio"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/naruaika/witt-data-studio"
Issues = "https://github.com/naruaika/witt-data-studio/issues"

[tool.maturin]
module-name = "witt_strutil._internal"

[[tool.mypy.overrides]]
module = "polars.utils.udfs"
ignore_missing_imports = true